# libzipvfs

./: .gitmodules  CMakeLists.txt  LICENSE.txt  OWNER  README.md
src/: zipvfs.c  zipvfs.h
